--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -54,7 +54,7 @@
   </div>
   <div class="row col-xs-offset-1 col-md-offset-1">
     <div class="col-xs-6 col-md-3">
-        <a id="donateBtn" href="#">Ein Bier an dem Entwickler 🍺</a>
+        <a id="donateBtn" href="#">Ein Bier an den Entwickler 🍺</a>
     </div>
     <div class="col-xs-5 col-md-2">
       <a target="_blank" href="{{ url_for('static',filename='html/impressum.html') }}"">
